--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
     <h1>WEEK DAYS</h1><br><br><br>
     <div class="m">
-        <div><img class="mm" src="./sun.webp"> </div>
+        <div><img class="mm" src="./sss.jpg"> </div>
        
         <div class="m1">SUNDAY</div>
         <div class="m2">MONDAY</div>
